--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_sound_suite
 description: a flutter sound suite for record and play voice easily
 version: 0.0.1
-author: Cloud <chanyunyu@vip.qq.com>
+author: Cloud<chanyunyu@vip.qq.com>
 homepage: https://github.com/SecretUltimate/flutter_sound_suite
 
 environment:
@@ -12,7 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^3.0.10
+  intl: ^0.16.1
+  uuid: ^2.2.0
   provider: ^4.3.2
+  path_provider: ^1.6.11
   flutter_sound: ^5.1.1
   permission_handler: ^5.0.1
 
