* 0.0.1+3 unlock flutter sound version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_sound_suite
 description: a flutter sound suite for record and play voice easily
-version: 0.0.1+2
+version: 0.0.1+3
 homepage: https://github.com/SecretUltimate/flutter_sound_suite
 
 environment:
@@ -15,7 +15,7 @@ dependencies:
   uuid: ^2.2.0
   provider: ^4.3.2
   path_provider: ^1.6.11
-  flutter_sound: 5.0.1
+  flutter_sound: ^5.0.1
   permission_handler: ^5.0.1
 
 dev_dependencies:
