--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_sound_suite
 description: a flutter sound suite for record and play voice easily
-version: 0.0.1+3
+version: 0.1.0
 homepage: https://github.com/SecretUltimate/flutter_sound_suite
 
 environment:
