## [0.1.0+1] 2020.11,30 * remove compute duration for current playing uri

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_sound_suite
 description: a flutter sound suite for record and play voice easily
-version: 0.1.0
+version: 0.1.0+1
 homepage: https://github.com/SecretUltimate/flutter_sound_suite
 
 environment:
