--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,22 @@
 name: flutter_sound_suite
 description: a flutter sound suite for record and play voice easily
-version: 0.1.0+2
+version: 0.2.0
 homepage: https://github.com/SecretUltimate/flutter_sound_suite
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=2.0.1 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   dio: ^3.0.10
-  intl: ^0.16.1
-  uuid: ^2.2.0
-  provider: ^4.3.2+3
-  path_provider: ^1.6.11
-  flutter_sound: ^6.4.7+1
-  permission_handler: ^5.0.1
+  intl: ^0.17.0
+  uuid: ^3.0.0
+  provider: ^5.0.0
+  path_provider: ^2.0.1
+  flutter_sound: ^8.0.0+2
+  permission_handler: ^6.0.1
 
 dev_dependencies:
   flutter_test:
