--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_sound_suite
 description: a flutter sound suite for record and play voice easily
-version: 0.2.0
+version: 0.2.0+1
 homepage: https://github.com/SecretUltimate/flutter_sound_suite
 
 environment:
@@ -10,13 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^3.0.10
+  dio: ^4.0.0-beta7
   intl: ^0.17.0
   uuid: ^3.0.0
   provider: ^5.0.0
   path_provider: ^2.0.1
-  flutter_sound: ^8.0.0+2
-  permission_handler: ^6.0.1
+  flutter_sound: ^8.0.0+6
+  permission_handler: ^6.0.0
 
 dev_dependencies:
   flutter_test:
