--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,20 +1,22 @@
 buildscript {
     ext.kotlin_version = '1.5.10'
     repositories {
+        maven { url "https://dl.google.com/dl/android/maven2/" }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         google()
-        jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.2'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
+        maven { url "https://dl.google.com/dl/android/maven2/" }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         google()
-        jcenter()
     }
 }
 
